# words-in-words-ru

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  words-in-words-ru.sln  words-in-words-ru.vcxproj  words-in-words-ru.vcxproj.filters
include/: Solver.h  TxtReader.h  Utf16.h
src/: Solver.cpp  TxtReader.cpp  Utf16.cpp  main.cpp
tests/: test_solver.cpp
words-in-words-ru-tests/: words-in-words-ru-tests.vcxproj  words-in-words-ru-tests.vcxproj.filters
